Wed, 13 Dec 2006 13:57:54 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Make wget "continue" (-c) and "retry 
          infinite" (-t0) so we don't get strange results when server 
          connection is closed or other network problems come up
        * src/gpodder/liblocdbreader.py: Remove bogus log message when 
          iPod sync is deactivated for a channel
        * src/gpodder/libgpodder.py: Handle broken channels more 
          graceful when saving the channels list (instead of completely 
          breaking the channel list.. oh my ;))
        * src/gpodder/gpodder.py: Remove the cache file first when adding 
          a channel that has been subscribed to before; display a more 
          specific message when trying to download an episode that has 
          already been downloaded

Wed, 13 Dec 2006 02:05:23 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Switch to (new) last channel when 
          deleting the last channel in the channel list in combobox

Wed, 13 Dec 2006 01:58:25 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: New-style channel editor dialog (code)
        * data/gpodder.glade: New-style channel editor dialog

Wed, 13 Dec 2006 01:28:11 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Bugfix for newest_pubdate_downloaded

Wed, 13 Dec 2006 01:22:30 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Utilize a FileChooserButton instead of
          "emulating" it using our own widgets and methods
        * data/gpodder.glade: Add FileChooserButton to gPodderProperties

Wed, 13 Dec 2006 01:14:41 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Code to support new style episode info 
          dialog
        * data/gpodder.glade: New style for your neat episode info dialog

Wed, 13 Dec 2006 00:17:40 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fix location of gPodder icon file
        * setup.py: Install gPodder 48x48 icon in /usr/share/gpodder for 