@@ -1,3 +1,9 @@
+Sat, 16 Dec 2006 18:43:04 +0100 <thp@perli.net>
+        * data/gpodder.glade: Re-structured the main menu
+        * src/gpodder/gpodder.py: Added some code to make the main menu 
+          appear more dynamic and context-specific
+        * bin/gpodder: The usual: push version + date
+
 Wed, 13 Dec 2006 13:57:54 +0100 <thp@perli.net>
         * src/gpodder/libwget.py: Make wget "continue" (-c) and "retry 
           infinite" (-t0) so we don't get strange results when server 
